--- a/package.json
+++ b/package.json
@@ -66,11 +66,12 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react-swc": "3.5.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.38",
     "tailwindcss": "3.4.1",
-    "tempo-devtools": "^2.0.94",
+    "tempo-devtools": "^2.0.95",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
